package com.silverhorse.freegames.adapters;
/* Created by Shay Mualem on 09/12/2021 */

import android.view.View;

public interface OnGameListener {

    void onGameClick(int position, View itemView);

}
